# BirdTracker

./: .env.example  .gitignore  DEPLOY.md  README.md  config.json  pyproject.toml  start-local.sh
.github/workflows/: backfill.yml  ci.yml  deploy.yml
data/history/US-DC/: 2024-07-01.json  2024-07-02.json  2024-07-03.json  2024-07-04.json  2024-07-05.json  2024-07-06.json  2024-07-07.json  2024-07-08.json  2024-07-09.json  2024-07-10.json  2024-07-11.json  2024-07-12.json  2024-07-13.json  2024-07-14.json  2024-07-15.json  2024-07-16.json  2024-07-17.json  2024-07-18.json  2024-07-19.json  2024-07-20.json  2024-07-21.json  2024-07-22.json  2024-07-23.json  2024-07-24.json  2024-07-25.json  2024-07-26.json  2024-07-27.json  2024-07-28.json  2024-07-29.json  2024-07-30.json  2024-07-31.json  2024-08-01.json  (+721 more)
data/reference/: taxonomy_slice.json
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AreaPicker.tsx  BirdMap.tsx  HotspotRows.tsx  LastUpdated.tsx  Nav.tsx  RareCards.tsx  SeasonBars.tsx  SeasonCalendar.tsx  SeasonalityChart.tsx  SpeciesList.tsx  icons.tsx
frontend/lib/: api.ts  area.tsx  format.ts  live.ts  media.ts  season.ts  taxa.ts  types.ts
frontend/types/: leaflet-heat-module.d.ts  leaflet-heat.d.ts
pipeline/: __init__.py  aggregate.py  backfill.py  config.py  ebird.py  export.py  history.py  update.py
tests/: conftest.py  test_aggregate.py  test_config.py  test_ebird.py  test_export.py  test_history.py
worker/: index.js  wrangler.toml
(+759 files in other folders)
